updated todo list

--- a/TODO
+++ b/TODO
@@ -1,8 +1,5 @@
-* Relationships
-  - we have :one, :many, we should be able to have, exactly_four, or one_per_foo
-* Epitheting vs. Nesting vs. Identifying
-  - remove alias from Relationship and create a similar Epiteth object?
 * Embeddings
-  - recursively embedded datastructures?
-  - how to work with perspectives?
+  - merge the branch
+  - use the complex serialization overhead only when needed loaded
 * ResourceProxy
+  - create from perspective
