--- a/TODO
+++ b/TODO
@@ -3,7 +3,8 @@
   - use the complex serialization overhead only when needed loaded
 * Observations
   - boil-down to a better API
-    + improve the DelayedObservation thing
-    + improve the Observer's eventing
+    + too many complications/interface for observe_source (for_hash, _source_ ...)
+    + improve the DelayedObservation thing or remove it altogether
+  - spec for all these
 * Proxies
   - a class like observations to manipulate distant
